ios woking finebut android crash

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "pods":"npx pod-install",
     "lint": "eslint .",
     "start": "react-native start",
     "build": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
