--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "pods":"npx pod-install",
+    "pods": "npx pod-install",
     "lint": "eslint .",
     "start": "react-native start",
     "build": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
@@ -24,6 +24,7 @@
     "react-native": "0.76.1",
     "react-native-document-picker": "^9.3.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
